<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_title">Music &amp; Movie Quiz</string>

    <!--Buttons-->
    <string name="next_btn">Next</string>
    <string name="previous_btn">Previous</string>
    <string name="score_btn">Score</string>
    <string name="try_again_btn">Try Again</string>


    <!--Questions-->
    <string name="q1">1. What is the name of the actor that had the main role in "Bruce Almighty"?</string>
    <string name="q2">2. Which of the following movies did Quentin Tarantino write and direct?</string>
    <string name="q3">3. Which of the following songs was composed by Pyotr Ilyich Tchaikovsky?</string>
    <string name="q4">4. Which animal is missing from this movie title: How to train your &#8230;?</string>
    <string name="q5">5. Which animal is missing from this movie title: The Silence of the &#8230;?</string>
    <string name="q6">6. "Stairway to Heaven" is a song by which rock band?</string>
    <string name="q7">7. Who wrote "Bohemian Rhapsody"?</string>

    <!--Answer 1 editText-->
    <string name="a1_editText">Jim Carrey</string>

    <!--Answer 2 checkbox-->
    <string name="a2_a_checkbox">Reservoir Dogs</string>
    <string name="a2_b_checkbox">The Bank Job</string>
    <string name="a2_c_checkbox">Pulp Fiction</string>
    <string name="a2_d_checkbox">Crank</string>

    <!--Answer 3 checkbox-->
    <string name="a3_a_checkbox">Eine kleine Nachtmusik</string>
    <string name="a3_b_checkbox">Swan Lake</string>
    <string name="a3_c_checkbox">The Nutcracker</string>
    <string name="a3_d_checkbox">The Four Seasons</string>

    <!--Answer 4 checkbox-->
    <string name="a4_a_checkbox">Dinosaur</string>
    <string name="a4_b_checkbox">Dodo</string>
    <string name="a4_c_checkbox">Duck</string>
    <string name="a4_d_checkbox">Dragon</string>

    <!--Answer 5 checkbox-->
    <string name="a5_a_checkbox">Lambs</string>
    <string name="a5_b_checkbox">Lemmings</string>
    <string name="a5_c_checkbox">Llamas</string>
    <string name="a5_d_checkbox">Lions</string>

    <!--Answer 6 checkbox-->
    <string name="a6_a_checkbox">Iron Maiden</string>
    <string name="a6_b_checkbox">Led Zeppelin</string>
    <string name="a6_c_checkbox">Metallica</string>
    <string name="a6_d_checkbox">Guns N\'Roses</string>

    <!--Answer 7 editText-->
    <string name="a7_editText">Freddie Mercury</string>

</resources>
